# Agentic

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  README.md  install.sh
.claude/: settings.json
crates/agentic-ci-record/: Cargo.toml  README.md
crates/agentic-ci-record/src/: lib.rs
crates/agentic-ci-record/tests/: record_fail.rs  record_malformed_input_preserves_row.rs  record_pass.rs  record_refuses_when_signer_unresolvable.rs  record_replaces_not_appends.rs  record_stamps_signer_on_pass_and_fail_rows.rs  record_standalone_resilience.rs  record_writes_resolved_signer_onto_test_runs_row.rs  stories_test_bare_id_runs_single_story.rs  stories_test_cycle_rejected.rs  stories_test_id_plus_runs_only_descendants.rs  stories_test_plus_id_plus_runs_full_subtree.rs  stories_test_plus_id_runs_only_ancestors.rs  stories_test_preserves_rows_for_unselected_stories.rs  stories_test_records_one_row_per_story_executed.rs  stories_test_unknown_id.rs
crates/agentic-cli/: Cargo.toml  README.md
crates/agentic-cli/src/: main.rs
crates/agentic-cli/tests/: audit_yaml_healthy_without_signing_row_via_binary.rs  cli_uses_configured_store.rs  health_all_flag_renders_flat_list.rs  health_drilldown.rs  health_exits_non_zero_on_error_or_unhealthy.rs  health_frontier_default_via_binary.rs  health_json_mode.rs  health_selectors_via_binary.rs  health_table_mode.rs  store_backfill_cli_dirty_tree_exits_2.rs  store_backfill_cli_rejects_all_flag.rs  store_backfill_cli_writes_row_through_binary.rs  stories_audit_json_mode.rs  stories_test_selectors_via_binary.rs  stories_test_unknown_id_exits_2.rs  story_build_subcommand_wires_to_library.rs  test_build_invokes_claude_and_writes_real_scaffold.rs  test_build_plan_and_record_roundtrip.rs  test_build_record_mixed_verdicts_through_binary.rs  uat_ancestor_refusal_exits_2.rs  uat_dirty_tree_exits_2.rs  uat_fail_does_not_promote.rs  uat_missing_signer_exits_two.rs  uat_pass_promotes.rs  uat_requires_verdict_flag.rs  uat_signer_flag_lands_on_signing_row.rs
crates/agentic-dashboard/: Cargo.toml  README.md
crates/agentic-dashboard/src/: lib.rs
crates/agentic-dashboard/tests/: audit_clean_corpus_reports_no_drift.rs  audit_flags_healthy_with_failing_test.rs  audit_flags_implementation_without_status_flip.rs  audit_flags_promotion_ready_under_construction.rs  audit_flags_signing_with_stale_related_files.rs  audit_flags_test_builder_not_started.rs  audit_flags_yaml_healthy_without_signing_row.rs  canopy_view_shows_retired_with_era_grouping.rs  frontier_view_hides_retired.rs  health_all_healthy_ancestors_do_not_affect_classification.rs  health_all_mode_renders_flat_list.rs  health_all_rejects_with_selector.rs  health_ancestor_reason_names_offending_id.rs  health_blast_radius_column.rs  health_canopy_shows_retired_grouped_by_chain.rs  health_composes_with_file_staleness.rs  health_drilldown.rs  health_drilldown_names_offending_ancestor.rs  health_drilldown_subtree_view.rs  health_expand_rejects_with_selector.rs  health_expand_shows_full_not_healthy_subtree.rs  health_frontier_default_hides_descendants_of_not_healthy.rs  health_frontier_default_hides_healthy_stories.rs  health_frontier_default_shows_proposed.rs  health_frontier_hides_retired.rs  health_healthy.rs  health_inherits_unhealthy_from_direct_ancestor.rs  health_inherits_unhealthy_from_transitive_ancestor.rs  health_json_mode.rs  health_lvl_uses_longest_path_to_dag_leaf.rs  health_malformed_yaml_renders_error_row.rs  health_permissive_absent_related_files_preserved.rs  health_proposed.rs  health_reason_lists_all_direct_offenders.rs  health_related_files_absent_is_permissive.rs  health_related_files_glob_matches_nested_path.rs  health_related_files_intersection_is_unhealthy.rs  health_related_files_no_intersection_stays_healthy.rs  health_selector_cycle_rejected.rs  health_selector_id_plus_lists_descendants.rs  (+7 more)
crates/agentic-runtime/: Cargo.toml  README.md
crates/agentic-runtime/examples/: mock_runtime_smoke.rs  real_runtime_smoke.rs
crates/agentic-runtime/src/: lib.rs  run_recorder.rs  runtime.rs
crates/agentic-runtime/tests/: claude_code_runtime_argv_never_contains_bare.rs  claude_code_runtime_new_returns_typed_error_when_claude_missing.rs  claude_code_runtime_refuses_api_key_fallback.rs  mock_runtime_emits_canned_ndjson_from_fixture.rs  run_recorder_captures_branch_state_from_git_repo.rs  run_recorder_standalone_resilience.rs  run_recorder_story_yaml_snapshot_is_sha256_at_launch.rs  run_recorder_tees_ndjson_to_configured_trace_path.rs  run_recorder_trace_path_is_under_runs_root_and_never_escapes.rs  run_recorder_writes_row_with_outcome_crashed_on_subprocess_failure.rs  run_recorder_writes_row_with_outcome_exhausted_on_budget.rs  run_recorder_writes_row_with_outcome_green_on_clean_exit.rs  runtime_enforces_iteration_budget_stops_at_max.rs  runtime_injects_sandbox_signer_env_into_claude_subprocess.rs  runtime_injects_sandbox_signer_into_recorder.rs  runtime_integration_with_real_claude.rs  runtime_maps_spawn_failure_to_run_outcome_crashed.rs  runtime_records_branch_state_without_merging.rs  runtime_trait_is_object_safe_behind_arc.rs  runtime_writes_resolved_signer_onto_run_row.rs
crates/agentic-signer/: Cargo.toml
crates/agentic-signer/src/: lib.rs
crates/agentic-signer/tests/: resolve_fails_typed_when_all_sources_empty.rs  resolve_falls_back_to_git_config_user_email.rs  resolve_prefers_cli_flag_over_env_and_git.rs  resolve_prefers_env_over_git_when_no_flag.rs  resolve_rejects_empty_and_whitespace_only_values.rs  signer_standalone_resilience.rs
crates/agentic-store/: Cargo.toml  README.md
crates/agentic-store/src/: lib.rs  surrealstore.rs
crates/agentic-store/tests/: backfill_bootstrap_skips_green_evidence_guard.rs  backfill_refuses_when_manual_signings_already_present.rs  backfill_refuses_when_no_green_evidence_file.rs  (+25 more)
crates/agentic-story/: Cargo.toml  README.md
crates/agentic-story-build/: Cargo.toml
crates/agentic-test-builder/: Cargo.toml
crates/agentic-test-support/: Cargo.toml  README.md
crates/agentic-uat/: Cargo.toml  README.md
(+322 files in other folders)
