[workspace]
resolver = "2"
members = [
    "crates/agentic-store",
    "crates/agentic-story",
    "crates/agentic-uat",
    "crates/agentic-ci-record",
    "crates/agentic-dashboard",
    "crates/agentic-cli",
    "crates/agentic-test-builder",
    # Story 16 un-defer: shell-only. The `agentic-runtime` crate hosts the
    # `RunRecorder` + `TraceTee` + `Outcome` types. Its `Cargo.toml` declares
    # no runtime dependencies yet; its `src/lib.rs` is empty. The crate is
    # admitted to the workspace so story 16's failing test scaffolds under
    # `crates/agentic-runtime/tests/` are discoverable by `cargo check
    # --workspace --tests` and the red-state probe can fire. The real
    # `[dependencies]` block lands when build-rust picks the story up.
    "crates/agentic-runtime",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
publish = false

[workspace.dependencies]
# Dependencies are added per-story when build-rust first needs them.
# Slow-growth principle: no crate in Cargo.toml without a failing test
# that demands it.
#
# serde_json (1): added by story 4. Chosen as the document type for the
# Store trait because story 4 pins behaviour against schemaless JSON-shaped
# values (see ADR-0002 "schemaless by default"), and storing docs as
# serde_json::Value keeps the trait object-safe (no type parameters on
# Store methods) while matching the shape every future consumer will read
# and write.
serde_json = "1"

# surrealkv (0.21): added by story 5 as the durable embedded backend
# behind the `Store` trait. ADR-0002 calls for "SurrealDB embedded" —
# surrealkv is the pure-Rust LSM-tree storage engine that SurrealDB's
# own `kv-surrealkv` feature wraps. We depend on it directly rather than
# on the full `surrealdb` crate for two load-bearing reasons:
#
#   1. The full `surrealdb` crate pulls in `surrealdb-core` (the
#      SurrealQL parser + planner + multi-engine kv layer), which is
#      several hundred thousand lines of Rust and has been observed
#      OOM-killing rustc on 4 GiB dev hosts during compilation. surrealkv
#      alone is an order of magnitude smaller and compiles in seconds.
#   2. Story 5 only pins the on-disk ACID kv subset of SurrealDB
#      (upsert-by-key, append, scan+filter, durability across reopen).
#      SurrealQL queries, graph edges, and live-queries are NOT in scope;
#      ADR-0002 calls those out as "future" / "when a consumer demands
#      it". Paying the surrealdb-core compile cost today buys capability
#      nothing in this story or any shipped story actually uses — a
#      slow-growth violation.
#
# If and when a story demands SurrealQL at the trait boundary we will
# add `surrealdb` proper as a workspace dep; the `Store` trait keeps
# that swap local to this crate.
surrealkv = "0.21"

# tokio (1): added by story 5 because surrealkv's `Transaction::commit`
# is async. The public `Store` trait is sync (story 4), so
# `SurrealStore` owns a private single-thread tokio runtime and
# `block_on`s each commit. Features are the minimum the runtime +
# surrealkv's own internal tokio usage need: `rt` for the runtime,
# `sync` for the channels surrealkv uses internally, and `time` so the
# runtime supports the timeouts surrealkv's `tokio/time` sub-feature
# requires. We deliberately avoid `rt-multi-thread` / `full` — a
# single-thread runtime bridged by `block_on` is sufficient for sync
# trait methods.
tokio = { version = "1", default-features = false, features = ["rt", "sync", "time", "macros"] }

# tempfile (3): added by story 5 as a DEV-dependency only — every
# SurrealStore test constructs its store rooted at a `TempDir` and
# relies on its drop-cleans-up behaviour. Not a runtime dependency of
# any crate.
tempfile = "3"

# serde (1): added by story 6. The story loader deserializes
# `stories/*.yml` into a typed `Story` struct; `#[derive(Deserialize)]`
# is the minimum surface that gives us typed fields + structural
# validation (unknown-field rejection via `deny_unknown_fields`) without
# hand-rolling a parser. The `derive` feature is required for the
# proc-macro; no other features are enabled.
serde = { version = "1", features = ["derive"] }

# serde_yaml (0.9): added by story 6. Story files are YAML; this is the
# de-facto serde data format for YAML in the Rust ecosystem and is
# already named as the expected parser in `crates/agentic-story/README.md`.
# Used only by `agentic-story`; deserialization errors carry source
# positions which the loader surfaces through its typed error enum.
serde_yaml = "0.9"

# chrono (0.4): added by story 3 for relative-age timestamp formatting
# (e.g. "3h ago" for the dashboard's `Healthy at` cell). Only the `serde`
# feature is enabled for RFC3339 serialization in JSON mode.
chrono = { version = "0.4", features = ["serde"] }

# Compile-time memory budget: even without surrealdb-core, the
# surrealkv LSM stack is substantial. We turn off debuginfo for
# dependencies in all profiles so rustc fits in memory on 4 GiB dev
# hosts. Our own crates keep their default debuginfo via `inherits`.
[profile.dev.package."*"]
debug = 0

[profile.test.package."*"]
debug = 0
