[package]
name = "agentic-ci-record"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
# Story 2: the recorder upserts schemaless JSON documents through the
# `Store` trait. Matches the shape every other consumer uses for
# `agentic-store` per ADR-0002.
agentic-store = { path = "../agentic-store" }

# Story 2: `test_runs` rows are modelled as `serde_json::Value` so the
# recorder can hand them to `Store::upsert` without a bespoke serializer.
serde_json.workspace = true

# Story 2: `commit` field in the `test_runs` row is the full SHA of
# HEAD at record time; git2 is the Rust-native binding to libgit2 the
# story's `guidance` explicitly allows. Discover the repo from the
# current working directory (any ancestor qualifies) so the recorder
# runs from any workspace crate's directory.
git2 = { version = "0.19", default-features = false }

# Story 12: the runner loads and parses story YAML files to extract
# id, depends_on, and acceptance.tests[].file for DAG traversal and
# test execution. serde_yaml is the standard Rust YAML deserializer
# and matches versions used across the workspace.
serde_yaml.workspace = true

[dev-dependencies]
# Story 12: the library-level selector scaffolds build a fixture
# `stories/` directory under a `TempDir` per test so the developer's
# real `stories/` is never read. Same idiom the agentic-story loader
# tests use.
tempfile.workspace = true

