[package]
name = "agentic-dashboard"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
# Story 3: the dashboard reads from `agentic-store` to load test_runs and
# uat_signings evidence for each story. MemStore is the test impl.
agentic-store = { path = "../agentic-store" }

# Story 3: the dashboard reads from `agentic-story` to load and validate
# story YAML files. Uses the typed `Story` and `Status` enums.
agentic-story = { path = "../agentic-story" }

# Story 3: JSON output requires serialization of the dashboard snapshot.
serde_json.workspace = true

# Story 3: timestamp relative-age formatting (e.g. "3h ago").
chrono.workspace = true

# Story 9: the file-intersection classifier uses git2 to compute the
# C0..HEAD file diff internally when a repo_root is provided. Promoted
# from dev-dependency to runtime dependency; pinned to the same version
# as other crates with default-features = false for consistency.
git2 = { version = "0.19", default-features = false }

# Story 9: glob-matching against related_files patterns. Patterns are
# rooted at repo root and must support ** crossing path separators.
# globset supports all required semantics and is workspace-friendly.
globset = "0.4"

[dev-dependencies]
# Story 3: the dashboard is a pure reader over the `Store` trait and the
# `stories/` directory. Integration tests seed an in-memory `MemStore`
# with the exact `test_runs` / `uat_signings` row shapes stories 2 and 1
# write, then assert on what the dashboard renders. `MemStore` is the
# canonical test fixture for `agentic-store` consumers (see
# crates/agentic-store/tests/*.rs and crates/agentic-uat/tests/*.rs).
agentic-store = { path = "../agentic-store" }

# Story 3: fixture stories are materialised to a `TempDir` as real YAML
# files so the dashboard exercises the same `StoryLoader` path every
# other consumer uses. The test does not construct `Story` values
# directly; it writes YAML and lets the library read it — the
# malformed-yaml scaffold in particular depends on the library owning
# the parse.
agentic-story = { path = "../agentic-story" }

# Story 3: the JSON-mode scaffold parses `Dashboard::render_json()`
# output back with `serde_json::from_str` to assert the exact top-level
# shape (`stories[]`, `summary{}`, full-40-char SHAs, null-able fields
# emitted as JSON null). Workspace-pinned — same version every other
# store consumer uses.
serde_json.workspace = true

# Story 3: every scaffold roots its fixture `stories/` directory under a
# `TempDir` so the live `stories/` at repo root is never touched.
# Matches the fixture idiom used by `agentic-uat`'s tests.
tempfile.workspace = true

# Story 9: the file-intersection scaffolds construct tempdir git repos
# with two commits each so the C0..HEAD diff the classifier computes
# against `related_files` is exercised end-to-end. `git2` is already the
# workspace's libgit2 binding choice (see crates/agentic-uat/Cargo.toml
# and crates/agentic-ci-record/Cargo.toml); pinned to the same version
# with `default-features = false` for the same reason.
git2 = { version = "0.19", default-features = false }

# Story 10: two scaffolds (expand-rejects-with-selector, all-rejects-
# with-selector) whose justifications pin argv-parse-time rejection
# behaviour at the compiled-binary layer. They live under
# `crates/agentic-dashboard/tests/` (per stories/10.yml) but must drive
# the `agentic` binary to observe exit-code-2 argv rejection — only
# the CLI sees argv. Same `assert_cmd` pin as `agentic-cli`'s tests.
assert_cmd = "2"

# Story 25: the audit scaffolds construct fixture corpora via
# `FixtureCorpus` from `agentic-test-support` rather than rolling
# bespoke per-file `setup_fixture_corpus` helpers. Per the
# `prefer-shared-scaffold` rule (test-builder process.yml) and the
# deep-modules principle (assets/principles/deep-modules.yml), the
# kit is the default for tempdir/stories-dir lifecycle in scaffolds
# even when the test still authors custom YAML for `acceptance.tests`.
agentic-test-support = { path = "../agentic-test-support" }

# Note: `agentic-cli` is NOT a dev-dep here because it has no lib
# target and Cargo would ignore the line with a warning. `assert_cmd`
# falls back to searching the workspace `target/` directory for the
# named binary, which works for `cargo test --workspace` runs. The
# workspace-level cargo invocation builds the `agentic` binary by
# virtue of the cli crate being a workspace member.
