[package]
name = "agentic-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
# Story 4: document type for the Store trait. See workspace Cargo.toml.
serde_json.workspace = true

# Story 4: serialization for StoreSnapshot type.
serde.workspace = true

# Story 5: durable embedded storage engine behind the `Store` trait.
# See workspace Cargo.toml for why we link against surrealkv directly
# rather than through the full `surrealdb` crate (compile-time memory
# budget + slow-growth: nothing in the current story set consumes
# SurrealQL or live queries).
surrealkv.workspace = true

# Story 5: tokio runtime, needed to bridge surrealkv's async
# `Transaction::commit` through the sync `Store` trait. See workspace
# Cargo.toml for the minimum-feature rationale.
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
# Story 5: tests root the SurrealStore at a temp dir for isolation and
# drop-based cleanup.
tempfile.workspace = true

# Story 16 scaffolds: the two `runs_table_*` tests exercise the `runs`
# table through the `RunRecorder` API that lives in `agentic-runtime`,
# because the story places those tests here (at the Store boundary
# where the row shape is parsed) rather than in `agentic-runtime`'s
# own tests. `agentic-runtime` has `agentic-store` as a dev-dep for
# `MemStore`; reciprocally pulling `agentic-runtime` in here as a
# dev-dep is a dev-graph cycle that Cargo permits because neither
# edge is a normal (runtime) dependency. Dev-scope only.
agentic-runtime = { path = "../agentic-runtime" }

# Story 28 scaffolds: the `backfill_*` integration tests construct a
# temporary git repo via `git2` to seed the YAML-flip commit and the
# green-jsonl evidence file the backfill library guard reads. Same
# `git2` pin as the `agentic-uat` and `agentic-ci-record` test suites.
# Dev-scope only — the runtime backfill code path will pull `git2`
# in as a normal dep when build-rust lands the implementation.
git2 = { version = "0.19", default-features = false }
